--- a/app/scss/elements/_header.scss
+++ b/app/scss/elements/_header.scss
@@ -1,3 +1,9 @@
-.container {
-  background: red;
+img{
+  width: 100%;
+  height: 100%;
+}
+
+.logo {
+  font-family: 'Lexend Zetta', sans-serif;
+  font-size: 3rem;
 }
