--- a/app/scss/elements/_header.scss
+++ b/app/scss/elements/_header.scss
@@ -1,9 +1,28 @@
-img{
-  width: 100%;
-  height: 100%;
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .logo {
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 50%;
+    img {
+      width: 15%;
+    }
+  }
+  ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    li a {
+      text-decoration: none;
+      color: white;
+      padding: 20px;
+      font-size: 2rem;
+    }
+  }
 }
 
-.logo {
-  font-family: 'Lexend Zetta', sans-serif;
-  font-size: 3rem;
-}
