--- a/app/scss/elements/overallContainer.scss
+++ b/app/scss/elements/overallContainer.scss
@@ -1,7 +1,6 @@
-.container {
-  width: 100vw;
-  height: 100vh;
-  background-image: url('../images/spacexbackground.jpg');
+.containerPage {
+  width: 1366px;
+  margin: 0 auto;
+  background-image: url("../images/Image.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
 }
