--- a/app/scss/config/topology.scss
+++ b/app/scss/config/topology.scss
@@ -1,3 +1,9 @@
 body {
-  font-family: 'Lexend Zetta', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
