--- a/app/scss/elements/_header.scss
+++ b/app/scss/elements/_header.scss
@@ -2,20 +2,13 @@
   width: 1088px;
   margin: 0 auto;
   height: 807px;
+  position: relative;
   .topBar {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    position: relative;
-    &::after {
-      content: "";
-      width: 1366px;
-      height: 90px;
-      background-color: rgba(0, 0, 0, 0.4);
-      position: absolute;
-      left: -139px;
-      z-index: 1;
-    }
+    width: 1088px;
+    margin: 0 auto;
     .logo {
       display: flex;
       align-items: center;
@@ -38,6 +31,9 @@
         align-items: center;
         li {
           padding: 35px 30px;
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+          }
           a {
             color: white;
             font: Bold 16px/22px Nunito Sans;
@@ -56,7 +52,7 @@
       font-family: 'Nunito Sans', sans-serif;
       color: white;
       text-align: center;
-      margin-top: 170px;
+      margin-top: 260px;
     }
     p {
       font: Bold 16px/22px Nunito Sans;
@@ -81,6 +77,7 @@
         background-color: #FF0000;
         color: white;
         margin-right: 25px;
+        box-shadow: 0 3px 6px #FF00004D;
       }
       .btn2 {
         background-color: white;
@@ -88,4 +85,31 @@
       }
     }
   }
+  .arrowDown {
+    background-color: #FF0000;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 6px #FF00004D;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
+
+#shadowElem {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  width: 1366px;
+  left: -139px;
+  border-bottom: 2px solid #FFFFFF33;
+}
+
+header {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
