main section HTML, blog styling

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,3 +2,4 @@
 @import "./config/topology";
 @import "./elements/overallContainer";
 @import "./elements/header";
+@import "./elements/mainsection";
