--- a/app/scss/elements/_header.scss
+++ b/app/scss/elements/_header.scss
@@ -110,6 +110,10 @@
 }
 
 header {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-image: url("../images/Image.jpg");
+  background-size: cover;
 }
 
+.wrapper {
+  background-color: rgba(0, 0, 0, 0.4);
+}
