--- a/app/scss/elements/_mainsection.scss
+++ b/app/scss/elements/_mainsection.scss
@@ -64,6 +64,84 @@
         background-color: #FF0000;
         box-shadow: 0 3px 6px #FF00004D;
         margin-top: 26px;
+        margin-bottom: 110px;
+      }
+    }
+  }
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-left: 2px solid #00000066;
+  border-right: 2px solid #00000066;
+  background-color: #28272C;
+  h2 {
+    color: white;
+    font: Bold 35px/47px Nunito Sans;
+    margin-top: 91px;
+    margin-bottom: 35px;
+    display: flex;
+    align-items: center;
+    &::before {
+      content: "";
+      width: 50px;
+      height: 3px;
+      background-color: #FF0000;
+      box-shadow: 0 1px 6px #FF00004D;
+      border-radius: 8px;
+      display: block;
+      margin-right: 10px;
+    }
+    &::after {
+      content: "";
+      width: 50px;
+      height: 3px;
+      background-color: #FF0000;
+      box-shadow: 0 1px 6px #FF00004D;
+      border-radius: 8px;
+      display: block;
+      margin-left: 10px;
+    }
+  }
+  .serviceContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 80px;
+    .service-item {
+      width: 231px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+      h3 {
+        font: Regular 19px/26px Nunito Sans;
+        color: white;
+        margin-top: 25px;
+      }
+      p {
+        font: Light 14px/19px Open Sans;
+        color: #B2B2B2;
+        margin-top: 15px;
+        text-align: center;
+      }
+      .button-blog {
+        color: white;
+        width: 142px;
+        height: 40px;
+        border-radius: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font: Bold 14px/19px Nunito Sans;
+        background-color: #FF0000;
+        box-shadow: 0 3px 6px #FF00004D;
+        margin-top: 26px;
+        margin-bottom: 110px;
       }
     }
   }
