contact section HTML + basic styling

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,3 +3,4 @@
 @import "./elements/overallContainer";
 @import "./elements/header";
 @import "./elements/mainsection";
+@import "./elements/contact";
