Footer + final fixes

--- a/app/scss/elements/_header.scss
+++ b/app/scss/elements/_header.scss
@@ -16,12 +16,14 @@
       img {
         width: 31px;
         height: 35px;
+        margin-right: 8px;
       }
       p {
         color: white;
         font: Bold 35px/47px Nunito Sans;
         span {
           color: #FF0000;
+          margin-right: 8px;
         }
       }
     }
