--- a/app/scss/elements/_contact.scss
+++ b/app/scss/elements/_contact.scss
@@ -4,6 +4,7 @@
   align-items: center;
   border-left: 2px solid #00000066;
   border-right: 2px solid #00000066;
+  height: 630px;
   h2 {
     color: black;
     font: Bold 35px/47px Nunito Sans;
